[build-system]
requires = ["flit"]
build-backend = "flit_core.buildapi"

[project]
name = "lintquarto"
authors = [{name = "Amy Heather"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
# No required dependencies - users install linters they want
dependencies = []

[project.scripts]
lintquarto = "lintquarto.__main__:main"

[project.optional-dependencies]
all = ["pylint", "flake8", "mypy"]
test = ["pytest"]

[project.urls]
Home = "https://github.com/lintquarto/lintquarto"