[build-system]
requires = ["flit"]
build-backend = "flit_core.buildapi"

[project]
name = "lintquarto"
description = "Package for running linters, static type checkers and code analysis tools on python code in quarto (.qmd) files."
authors = [{name = "Amy Heather", email = "a.heather2@exeter.ac.uk"}]
maintainers = [{name = "Amy Heather", email = "a.heather2@exeter.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
keywords = ["lint", "quarto", "qmd", "pylint", "flake8", "mypy"]

# Only two required dependencies - otherwise users install linters they want
dependencies = [
  "toml",
  "pyyaml"
]

# Python 3.7 reached end-of-life in 2023 and 3.8 is in security-fix only mode.
# lintquarto targets only actively maintained python versions, to align
# with NEP 29 guidance and modern tooling support.
requires-python = ">=3.9"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing :: Markup",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[project.scripts]
lintquarto = "lintquarto.__main__:main"

[project.optional-dependencies]
all = [
  "pylint",
  "flake8",
  "pyflakes",
  "ruff",
  "vulture",
  "radon",
  "pycodestyle",
  "mypy",
  "pydoclint",
  "pyright",
  "pyrefly",
  "pytype; python_version <= '3.12'"
]

[dependency-groups]
dev = [
  "check-dependencies",
  "genbadge",
  "grayskull",
  "jupyter",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "quartodoc",
  "twine",
  "types-PyYAML",
  "types-toml"
]
test = [
  "check-dependencies",
  "genbadge[coverage]",
  "pytest",
  "pytest-cov",
  "lintquarto[all]"
]

[project.urls]
Home = "https://github.com/lintquarto/lintquarto"
"Bug Reports" = "https://github.com/lintquarto/lintquarto/issues"
Source = "https://github.com/lintquarto/lintquarto"

[tool.ruff]
exclude = ["tests/examples/*"]
line-length=79
format.quote-style="double"
lint.select = ["ALL"]
lint.ignore = [
  "T201",  # print found
  "T203",  # pprint found
  "S603",  # subprocess call: check for execution of untrusted input
]
lint.pydocstyle.convention = "numpy"
lint.per-file-ignores."tests/*" = [
    "INP001",  # File {filename} is part of an implicit namespace package. Add an __init__.py.
    "S101",  # Use of `assert` detected
    "ANN",  # Missing type annotations
]
lint.per-file-ignores."docs/*" = [
    "INP001"
]